<resources>
    <string name="app_name">ACME Supermarket</string>
    <string name="login">Login</string>
    <string name="description">description</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="go">Go!</string>
    <string name="register">Register</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="home">Home</string>
    <string name="not_defined">Not defined</string>
    <string name="payment_card">Payment Card</string>
    <string name="proceed_to_checkout">Proceed to Checkout</string>
    <string name="add_new_product">Add new product</string>
    <string name="delete_product">delete</string>
    <string name="cart_subtotal">Cart Subtotal</string>
    <string name="promotion">Promotion</string>
    <string name="total">Total</string>
    <string name="unknown_price">Unknown Price</string>
    <string name="finish">Finish</string>
    <string name="qr_code">QR code</string>
    <string name="empty_product_list">Empty Product List</string>
    <string name="no_purchases_made_yet">No Purchases Made Yet</string>
    <string name="no_vouchers">No Vouchers</string>
    <string name="vouchers">Vouchers</string>
    <string name="back">Back</string>
    <string name="pay">Pay</string>
    <string name="add_voucher">Add voucher</string>
    <string name="logout">Logout</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="products_list">Products List</string>
    <string name="remove_Voucher">Remove Voucher</string>
    <string name="product_price">Product Price</string>
    <string name="delete_item">Delete Item</string>
    <string name="product_name">Product Name</string>
    <string name="product_quantity">Product Quantity</string>
</resources>