<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="50dp"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Fragments.RegisterFragment">


    <EditText
        android:id="@+id/edit_register_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Name"
        android:drawableEnd="@drawable/outline_info_black_18"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/edit_register_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/username"
        android:drawableEnd="@drawable/outline_account_circle_black_18"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/edit_register_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password"
        android:drawableEnd="@drawable/outline_lock_black_18"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/edit_payment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/payment_card"
        android:drawableEnd="@drawable/outline_credit_card_black_18"
        android:imeOptions="actionDone"
        android:inputType="number" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/buttons"
        android:layout_marginTop="50dp"
        android:text="@string/go" />

    <Button
        android:id="@+id/btn_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/buttons"
        android:layout_marginTop="50dp"
        android:text="@string/back" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>