<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Fragments.LoginFragment">

    <ImageView
        android:layout_width="250dp"
        android:layout_gravity="center"
        android:layout_height="250dp"
        android:src="@drawable/logov2"
        android:contentDescription="@string/description"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:layout_marginHorizontal="70dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edit_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/outline_account_circle_black_18"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/edit_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/outline_lock_black_18"
            android:ems="10"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:inputType="textPassword" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="70dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:textColor="@color/purple_200"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/buttons"
            android:text="@string/go" />

        <Button
            android:id="@+id/register_btn"
            android:layout_width="match_parent"
            android:textColor="@color/purple_200"
            android:background="@drawable/buttons"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/register" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>