<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/product_image"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/no_image" />

            <LinearLayout
                android:layout_width="247dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <org.feup.cm.acmeapp.customfont.MyTextViewMeriendaRegular
                    android:id="@+id/product_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/product_name"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <org.feup.cm.acmeapp.customfont.MyTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/product_price"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="10dp"
                        android:gravity="center_horizontal"
                        />


                    <org.feup.cm.acmeapp.customfont.MyTextView
                        android:id="@+id/product_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="center_horizontal"
                        android:text="@string/product_price" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <org.feup.cm.acmeapp.customfont.MyTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/product_quantity"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="10dp"
                        android:gravity="center_horizontal"
                        />

                    <org.feup.cm.acmeapp.customfont.MyTextView
                        android:id="@+id/product_quantity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="center_horizontal"
                        android:text="@string/product_quantity" />

                </LinearLayout>



            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageButton
                    android:id="@+id/delete_product"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:background="@color/white"
                    android:backgroundTint="@color/white"
                    android:contentDescription="@string/delete_item"
                    android:src="@drawable/outline_delete_black_20" />
            </RelativeLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>