<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/flFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ListView
                android:id="@+id/array_listview"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </ListView>

            <TextView
                android:id="@+id/empty_list"
                android:gravity="center_vertical|center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/empty_product_list" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|bottom"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <com.google.android.material.floatingactionbutton.FloatingActionButton

                android:id="@+id/addProduct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                android:layout_margin="16dp"
                android:padding="20dp"
                android:text="@string/add_new_product"
                android:src="@drawable/outline_qr_code_scanner_white_18"
                app:tint="@color/white"
                app:backgroundTint="#673AB7"
                android:textColor="@color/white" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/proceedCheckout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                android:layout_margin="16dp"
                android:src="@drawable/outline_shopping_basket_white_18"
                android:padding="20dp"
                app:backgroundTint="#673AB7"
                android:text="@string/proceed_to_checkout"
                app:tint="@color/white"
                android:textColor="@color/white" />
        </LinearLayout>

    </FrameLayout>

    <include
        layout="@layout/bottom_navigation_bar" />

</androidx.constraintlayout.widget.ConstraintLayout>